--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "author":"LazyCat",
-    "title":"Test",
-    "logo":"https://avatars1.githubusercontent.com/u/37890402?s=460&v=4",
+    "title":"学习",
+    "logo":"https://avatars3.githubusercontent.com/u/59493573?s=460&v=4",
     "path":"",
     "pageItems":15,
     "tag":[{"name":"android"},{"name":"C++"},{"name":"Linux"},{"name":"转载与收藏"},{"name":"Java"},{"name":"Learn"}],
