--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "title":"学习",
     "logo":"https://avatars3.githubusercontent.com/u/59493573?s=460&v=4",
     "path":"",
-    "pageItems":15,
+    "pageItems":20,
     "tag":[{"name":"android"},{"name":"C++"},{"name":"Linux"},{"name":"转载与收藏"},{"name":"Java"},{"name":"Learn"}],
     "list":[
         {"date":"2018-07-13","title":"Android静默安装","mode":"index-model","tag":0,"path":"../","encrypt":true,"page":"2018-07-14-01.html","isCreate":false},
@@ -16,6 +16,7 @@
         {"date":"2019-04-13","title":"学习集合一","mode":"index-model","tag":2,"path":"../","encrypt":true,"page":"2019-04-13-01.html","isCreate":false},
         {"date":"2019-04-16","title":"高精度运算","mode":"index-model","tag":4,"path":"../","encrypt":true,"page":"2019-04-16-01.html","isCreate":false},
         {"date":"2019-04-16","title":"编译ffmpeg(一)","mode":"index-model","tag":4,"path":"../","encrypt":true,"page":"2019-04-16-02.html","isCreate":true},
-        {"date":"2019-09-28","title":"阿里云Ubuntu问题","mode":"index-model","tag":4,"path":"../","encrypt":true,"page":"2019-09-28-01.html","isCreate":true}
+        {"date":"2019-09-28","title":"阿里云Ubuntu问题","mode":"index-model","tag":4,"path":"../","encrypt":true,"page":"2019-09-28-01.html","isCreate":true},
+        {"date":"2020-10-13","title":"AS的startService无法启动Service","mode":"index-model","tag":0,"path":"../","encrypt":true,"page":"2020-10-13-01.html","isCreate":true}
     ]
 }
