--- a/config.json
+++ b/config.json
@@ -17,6 +17,8 @@
         {"date":"2019-04-16","title":"高精度运算","mode":"index-model","tag":4,"path":"../","encrypt":true,"page":"2019-04-16-01.html","isCreate":false},
         {"date":"2019-04-16","title":"编译ffmpeg(一)","mode":"index-model","tag":4,"path":"../","encrypt":true,"page":"2019-04-16-02.html","isCreate":true},
         {"date":"2019-09-28","title":"阿里云Ubuntu问题","mode":"index-model","tag":4,"path":"../","encrypt":true,"page":"2019-09-28-01.html","isCreate":true},
-        {"date":"2020-10-13","title":"AS的startService无法启动Service","mode":"index-model","tag":0,"path":"../","encrypt":true,"page":"2020-10-13-01.html","isCreate":true}
+        {"date":"2020-10-13","title":"AS的startService无法启动Service","mode":"index-model","tag":0,"path":"../","encrypt":true,"page":"2020-10-13-01.html","isCreate":true},
+        {"date":"2020-10-22","title":"Ubuntu编译VLC代码","mode":"index-model","tag":2,"path":"../","encrypt":true,"page":"2020-10-22-01.html","isCreate":true},
+        {"date":"2021-01-18","title":"交叉编译FFmpeg+x264+265(1)","mode":"index-model","tag":2,"path":"../","encrypt":true,"page":"2021-01-18-01.html","isCreate":true}
     ]
 }
